--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "j-tree-view",
-  "version": "1.0.0",
-  "description": "A library of useful functions for dealing with pseudo number generators in typescript.",
+  "version": "1.0.3",
+  "description": "his package includes a class which can handle drawing and updating tree views in typescript to generate html.",
   "module": "index.ts",
   "main": "index.ts",
   "scripts": {
